# src/main/resources/swagger/api.yml
@@ -164,6 +164,79 @@ paths:
           description: "successful operation"
           schema:
             type: "boolean"
+  /projectRole:
+    get:
+      tags:
+      - "projectRole"
+      summary: "List all /projectRole"
+      operationId: "listProjectRoles"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/ProjectRoleDto"
+    post:
+      tags:
+      - "projectRole"
+      summary: "Add a new project role"
+      operationId: "addProjectRole"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "projectRole"
+        required: true
+        schema:
+          $ref: "#/definitions/ProjectRoleDto"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "boolean"
+
+  /projectRole/{projectRoleId}:
+    get:
+      tags:
+      - "projectRole"
+      summary: "View Project Roles"
+      operationId: "viewProjectRoles"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "projectRoleId"
+        in: "path"
+        description: "ID of project role"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/ProjectRoleDto"
+    delete:
+      tags:
+      - "projectRole"
+      summary: "Delete Project role"
+      operationId: "deleteProjectRole"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "projectRoleId"
+        in: "path"
+        description: "ID of project role"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "boolean"
 
 definitions:
   ProjectDto:
@@ -210,7 +283,6 @@ definitions:
         format: "int64"
       title:
         type: "string"
-
 
   ProjectRoleDto:
     type: "object"
